--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
     "date-fns": "^4.1.0",
+    "echarts": "^5.5.1",
     "embla-carousel-react": "^8.3.1",
     "firebase": "^11.0.1",
     "input-otp": "^1.4.1",
