--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,13 +22,13 @@ jobs:
           node-version: '16'
 
       - name: Install dependencies
-        run: npm install
+        run: yarn install
 
       - name: Lint code
-        run: npm run lint
+        run: yarn run lint
 
       - name: Run tests
-        run: npm test
+        run: yarn test
 
       - name: Build project
-        run: npm run build
+        run: yarn run build
