--- a/package.json
+++ b/package.json
@@ -63,6 +63,10 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@babel/core": "^7.26.0",
+    "@babel/preset-env": "^7.26.0",
+    "@babel/preset-react": "^7.26.3",
+    "@babel/preset-typescript": "^7.26.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.1.0",
@@ -71,9 +75,11 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/testing-library__react": "^10.2.0",
+    "babel-jest": "^29.7.0",
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "ts-jest": "^29.2.5",
