--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "embla-carousel-react": "^8.3.1",
     "firebase": "^11.0.1",
     "input-otp": "^1.4.1",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.456.0",
     "next": "15.0.3",
     "next-themes": "^0.4.3",
@@ -67,6 +68,7 @@
     "@babel/preset-typescript": "^7.26.0",
     "@testing-library/dom": "^10.4.0",
     "@types/jest": "^29.5.14",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
