--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "echarts": "^5.5.1",
     "embla-carousel-react": "^8.3.1",
     "firebase": "^11.0.1",
+    "html2canvas": "^1.4.1",
     "input-otp": "^1.4.1",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.456.0",
