--- a/package.json
+++ b/package.json
@@ -49,12 +49,13 @@
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.456.0",
     "next": "15.0.3",
-    "next-themes": "^0.4.3",
+    "next-themes": "^0.4.6",
     "react": "^18.3.1",
     "react-day-picker": "8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
     "react-icons": "^5.3.0",
+    "react-loading-skeleton": "^3.5.0",
     "react-resizable-panels": "^2.1.6",
     "recharts": "^2.13.3",
     "sonner": "^1.7.0",
