--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
-    "date-fns": "^4.1.0",
+    "date-fns": "^3.6.0",
     "echarts": "^5.5.1",
     "embla-carousel-react": "^8.3.1",
     "firebase": "^11.0.1",
@@ -51,7 +51,7 @@
     "next": "15.0.3",
     "next-themes": "^0.4.6",
     "react": "^18.3.1",
-    "react-day-picker": "8.10.1",
+    "react-day-picker": "^9.7.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
     "react-icons": "^5.3.0",
